test/e2e/suites/separate-appnetwork-v6/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: e2e-separate-appnetwork-v6

resources:
- ../../../../config/default

images:
- name: controller-manager
  newName: registry.nordix.org/cloud-native/meridio-2/controller-manager
  newTag: latest

nameSuffix: -separate-appnet-v6

labels:
- pairs:
    e2e-suite: separate-appnet-v6

patches:
- patch: |-
    apiVersion: admissionregistration.k8s.io/v1
    kind: ValidatingWebhookConfiguration
    metadata:
      name: not-important
      annotations:
        cert-manager.io/inject-ca-from: e2e-separate-appnetwork-v6/meridio-2-serving-cert-separate-appnet-v6
    webhooks:
    - name: vl34route-v1alpha1.kb.io
      namespaceSelector:
        matchLabels:
          e2e-suite: separate-appnet-v6
      clientConfig:
        service:
          name: meridio-2-webhook-service-separate-appnet-v6
          namespace: e2e-separate-appnetwork-v6
  target:
    kind: ValidatingWebhookConfiguration
- patch: |-
    - op: replace
      path: /spec/dnsNames
      value:
      - meridio-2-webhook-service-separate-appnet-v6.e2e-separate-appnetwork-v6.svc
      - meridio-2-webhook-service-separate-appnet-v6.e2e-separate-appnetwork-v6.svc.cluster.local
    - op: replace
      path: /spec/secretName
      value: webhook-server-cert-separate-appnet-v6
  target:
    group: cert-manager.io
    kind: Certificate
    name: serving-cert
- patch: |-
    apiVersion: apps/v1
    kind: Deployment
    metadata:
      name: not-important
    spec:
      template:
        spec:
          containers:
          - name: manager
            env:
            - name: MERIDIO_LB_SERVICE_ACCOUNT
              value: meridio-2-stateless-load-balancer-separate-appnet-v6
            - name: MERIDIO_LOG_LEVEL
              value: info
            - name: MERIDIO_LOG_LEVEL_API
              value: 127.0.0.1:9901
          volumes:
          - name: webhook-certs
            secret:
              secretName: webhook-server-cert-separate-appnet-v6
  target:
    kind: Deployment
    labelSelector: control-plane=controller-manager
