test/e2e/suites/separate-appnetwork-v6/routing.yaml
---
# gw-v6a1 router (VLAN 100, ASN 64512, reuses separate-appnetwork-v4 gw-a1 slot, IPv6-only)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-v6a1-router-v6
spec:
  gatewayRef:
    name: gw-v6a1
  interface: "vlan-100"
  address: "fd00:cafe:10::150"
  protocol: "BGP"
  bgp:
    localASN: 64512
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: L34Route
metadata:
  name: route-v6a1
spec:
  parentRefs:
  - name: gw-v6a1
  backendRefs:
  - group: meridio-2.nordix.org
    kind: DistributionGroup
    name: dg-v6a1
  destinationCIDRs:
  - "fd00:cafe:1::1/128"
  protocols:
  - TCP
  - UDP
  destinationPorts:
  - "5000-5001"
  priority: 100
---
# gw-v6a2 router (VLAN 200, ASN 64513, reuses separate-appnetwork-v4 gw-a2 slot, IPv6-only)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-v6a2-router-v6
spec:
  gatewayRef:
    name: gw-v6a2
  interface: "vlan-200"
  address: "fd00:cafe:11::150"
  protocol: "BGP"
  bgp:
    localASN: 64513
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: L34Route
metadata:
  name: route-v6a2
spec:
  parentRefs:
  - name: gw-v6a2
  backendRefs:
  - group: meridio-2.nordix.org
    kind: DistributionGroup
    name: dg-v6a2
  destinationCIDRs:
  - "fd00:cafe:1::2/128"
  protocols:
  - TCP
  - UDP
  destinationPorts:
  - "5000-5001"
  priority: 100
